--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,3 +25,21 @@
  * ========================================
  */
 @use 'layouts/roadmap';
+/**
+ * ========================================
+ *  SELECTOR MODAL
+ * ========================================
+ */
+@use '../scss/components/-roadmap-selector-modal.scss';
+/**
+ * ========================================
+ * ROADMAP MODAL
+ * ========================================
+ */
+@use '../scss/components/-roadmap-modal.scss';
+/**
+ * ========================================
+ * ROADMAP NODES
+ * ========================================
+ */
+@use '../scss/components/roadmap-nodes';
