--- a/css/roudmap.css
+++ b/css/roudmap.css
@@ -1,295 +1,7 @@
-
-.roadmap-section,
-.roadmap-list {
-  color: var(--text-primary);
-  display: flex;
-  flex-direction: column;
-  
-  position: relative;
-}
-.roadmap-list {
-  gap: 4rem;
-  padding: 2rem 1.5rem 1.5rem 1.5rem
-}
-
-  
-.roadmap-section {
-  flex-grow: 1;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  margin-top: 5rem;
-}
-li:first-of-type .title-roudmap::after {
-  content: '';
-  border-bottom: 1px solid var(--glass-border);
-  width: 90%;
-  position: absolute;
-  top:120%;
-}
-  
-.title-roudmap{
-  
-  height: 2rem;
-  display: flex;
-  font-size: 16px;
-  font-weight: 600;
-  border-radius: 8px 8px 0 0;
-  justify-content: center;
-  position: relative;
-  padding:.2rem 0 .5rem 0;
-  flex-direction: row;
-  align-items: center;
-  
-}
-.roadmap-box {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  
-  height: 70dvh;
-  overflow-y: auto;
-  scroll-behavior: smooth;
-  scroll-snap-type: y mandatory;
-  scroll-padding-top: 2rem;
-  -webkit-overflow-scrolling: touch;
-  scrollbar-width: none;
-}
-.roadmap-node {
-  /* background: var(--color-bg-soft);
-  border: 0.5px solid var(--glass-border); 
-  overflow: visible;
-  max-width: 18rem;
-  width: auto;
-  max-height: initial;
-  height: auto;
-  position: relative;
-  display: flex;
-  justify-content: space-around; 
-  transition: transform 0.4s ease;
-  flex-direction: column;
-  
-  scroll-snap-align: start;
-  border-radius: 8px;
-  z-index: 10; */
-  position: relative;
-}
-.roadmap-node__content {
-   background: var(--color-bg-soft);
-  border: 0.5px solid var(--glass-border); 
-  overflow: visible;
-  max-width: 18rem;
-  width: auto;
-  max-height: initial;
-  height: auto;
-  position: relative;
-  display: flex;
-  justify-content: space-around; 
-  transition: transform 0.4s ease;
-  flex-direction: column;
-  position: relative;
-  scroll-snap-align: start;
-  border-radius: 8px;
-   
-}
-  
-  
-  
- 
-@property --angle{
-  syntax: "<angle>";
-  initial-value: 0deg;
-  inherits: false;
-}
-.active-border{ 
-  
-  box-sizing: content-box;
-  border-radius: 8px;
-  content: '';
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background-image: conic-gradient(from var(--angle), transparent 80%, var(--color-accent));
-  top: 50%;
-  left: 50%;
-  translate: -50% -50%;
-  z-index: -1;
-  padding: 2px;
-  animation: 2.5s spin linear infinite;
-}
-
-.active-border-blur{
-  filter: blur(1rem);
-  opacity: .5;
-}
-
-@keyframes spin {
-  from {
-    --angle: 0deg;
-  }
-  to{
-    --angle: 360deg;
-  }
-}
-.roud-title{
-   
-  line-height: 1.5;
-  font-size: 18px;
-  font-weight: 600;
-  
-}
-  
-  
- 
-
-.node-btn-container{
-  display:flex;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  flex-direction: row-reverse;
-  margin-top: .5rem;
-  margin-bottom: .5rem;
-  width: 100%;
-  padding: .5rem 0 .5rem 0;
-}
-
-
-.node-time{
-  display: flex;
-  align-items: center;
-  font-weight: 500;
-  font-size: 9px;
-  border-radius: 0 0 10px 10px;
-  letter-spacing: 1px;
-  padding: .1rem;
-  position: absolute;
-  margin-top: .5rem;
-  top: 1rem;
-  right: 6%
-  
-  
-  
-  
-  
-  
-  
-  
-}
-.node-text{
-  
-  display: flex;
-  position: relative;
-  width: 100%;
-  min-height:  2rem;
-  margin: .5rem 0 0 1rem;
-  padding:.1rem 0 .1rem 0 ;
-  border-radius: 10px 10px 0 0;
-  
-}
-.progress-text {
-  margin-top: 4px;
-}
-.progress-container {
-  display:flex;
-  width: 100%;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: .5rem;
-}
-.progress-bar{
-  height: 12px;
-  width: 80%;
-  background-color: var(--color-subtask);
-  border:  .5px solid var(--glass-border);
-  border-radius: 5px;
-  overflow: hidden;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.progress-fill {
-  height: 100%;
-  width: 0%;
-  background-color: var(--color-accent);
-  filter: blur(10px);
-  transition: width 1s ease-in-out;
-}
-.progress-text {
-  font-weight: 500;
-  font-size: 12px;
-  letter-spacing: 1px;
-  display: flex;
-  position: absolute;
-  
-}
-.subtask-list{
-  display:flex;
-  flex-wrap: wrap;
-  overflow-y: auto;
-  max-height: 15rem;
-  margin-top: .5rem;
-  
-}
-.subtask-item{
-  margin: .2rem 1rem .2rem 1rem;
-  display: flex;
-  padding: .2rem 0 .2rem 0;
-  font-size: 11px;
-  font-weight: 500;
-  flex-wrap: wrap;
-}
-.roud-disabld-checkbox {
-  opacity: 0;
-  position: absolute;
-  pointer-events: none;
-}
-.custom-check{
-  height: 1rem;
-  width: 1rem;
-  border: 1px solid var(--glass-border);
-  border-radius: 2px;
-  position: relative;
-  display: inline-block;
-  margin-right: .5rem;
-}
-.subtask, .subtask-text{
-  display: flex;
-  flex-wrap: wrap;
-}
-.roud-disabld-checkbox:checked +.custom-check::after {
-  content: '';
-  position: absolute;
-  left: 5px;
-  top: 1px;
-  width: 6px;
-  height: 12px;
-  border:   solid var(--color-done);
-  transform: rotate(45deg);
-  border-width:0 2px 2px 0 ;
-}
-.roud-disabld-checkbox:checked ~ .subtask-text {
-  color: var(--color-done);
-  text-decoration: line-through;
-  opacity: .5;
-}
-.roadmap-node.right {
-  
-  align-self: flex-start;
-}
-
- .roadmap-node.left {
-  
-  align-self: flex-end;
-}
-.roadmap-list .roadmap-node:first-child {
- margin-top: 1.5rem;
-}
-.roud-modal{
+/* .roadmap-list .roadmap-node:first-child {
+  margin-top: 1.5rem;
+} */
+/* .roud-modal {
   display: flex;
   position: fixed;
   flex-direction: column;
@@ -307,319 +19,301 @@ li:first-of-type .title-roudmap::after {
   -webkit-backdrop-filter: blur(0px);
   text-align: center;
   z-index: 10;
-  
 }
-    
+
 .modal-section {
-    display: flex;
-    position: relative;
-    width: 90%;
-    height: 18rem;
-    flex-direction: column;
-    border-radius: 10px;
-    border: solid 0.5px var(--glass-border);
-    flex-direction: column;
-    align-items: flex-start;
-    
-    background-color: var(--color-hamburger);
-    
-  }
-  .modal-tab-bar{
-    display: flex;
-    width: 100%;
-    height: 30%;
-    
-  }
-  .new-roud-title{
-    display: flex;
-    width: 100%;
-    font-weight: 700;
-    margin-top: .5rem;
-    justify-content: center;
-    position: relative;
-  }
-  .new-roud-title::after{
-    content: '';
-    position: absolute;
-    border-bottom: solid 0.5px var(--glass-border);
-    width: 80%;
-    top: 1.5rem;
-    margin-top: 0.5rem;
-  }
-  .manual-content{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    
-  }
-  .roudnode-title {
-    margin:  0 0 .5rem 1.5rem;
-  }
-  .roudnode-title::placeholder{
-    color: var(--color-text-secondary);
-    font-size: 12px;
-    font-family: "Oxanium", sans-serif;
-    display: flex;
-    margin: 1rem 0 0 1rem;
-    transition: all 0.8s ease;
-  }
-  .roudnode-title:focus::placeholder{
-    transform: translateX(5rem);
-    opacity: 0;
-  }
-  .modal-subtask, .modal-subtask-text {
-    display: flex;
-    flex-wrap: wrap;
-    font-size: 10px;
-  }
-  .modal-subtask {
-    margin-bottom: .5rem;
-  }
-  .modal-custom-check{
-  height: .8rem;
-  width: .8rem;
+  display: flex;
+  position: relative;
+  width: 90%;
+  height: 18rem;
+  flex-direction: column;
+  border-radius: 10px;
+  border: solid 0.5px var(--glass-border);
+  flex-direction: column;
+  align-items: flex-start;
+
+  background-color: var(--color-hamburger);
+}
+.modal-tab-bar {
+  display: flex;
+  width: 100%;
+  height: 30%;
+} */
+.new-roud-title {
+  display: flex;
+  width: 100%;
+  font-weight: 700;
+  margin-top: 0.5rem;
+  justify-content: center;
+  position: relative;
+}
+.new-roud-title::after {
+  content: '';
+  position: absolute;
+  border-bottom: solid 0.5px var(--glass-border);
+  width: 80%;
+  top: 1.5rem;
+  margin-top: 0.5rem;
+}
+.manual-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.roudnode-title {
+  margin: 0 0 0.5rem 1.5rem;
+}
+.roudnode-title::placeholder {
+  color: var(--color-text-secondary);
+  font-size: 12px;
+  font-family: 'Oxanium', sans-serif;
+  display: flex;
+  margin: 1rem 0 0 1rem;
+  transition: all 0.8s ease;
+}
+.roudnode-title:focus::placeholder {
+  transform: translateX(5rem);
+  opacity: 0;
+}
+.modal-subtask,
+.modal-subtask-text {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 10px;
+}
+.modal-subtask {
+  margin-bottom: 0.5rem;
+}
+.modal-custom-check {
+  height: 0.8rem;
+  width: 0.8rem;
   border: 1px solid var(--glass-border);
   border-radius: 2px;
   position: relative;
   display: inline-block;
-  margin-right: .5rem;
+  margin-right: 0.5rem;
   margin-left: 1.5rem;
 }
 
-.roud-disabld-checkbox:checked +.modal-custom-check::after {
+.roud-disabld-checkbox:checked + .modal-custom-check::after {
   content: '';
   position: absolute;
   left: 2px;
   top: 0px;
   width: 5px;
   height: 12px;
-  border:   solid var(--color-done);
+  border: solid var(--color-done);
   transform: rotate(45deg);
-  border-width:0 2px 2px 0 ;
+  border-width: 0 2px 2px 0;
 }
 .roud-disabld-checkbox:checked ~ .modal-subtask-text {
   color: var(--color-done);
   text-decoration: underline;
-  opacity: .5;
+  opacity: 0.5;
 }
-.sub-element-container{
+.sub-element-container {
   display: flex;
   position: relative;
 }
-.modal-sub-task-list{
+.modal-sub-task-list {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   font-size: 10px;
   margin: 1rem 0 0 1.5rem;
   max-height: 5rem;
-  
-  gap: .5rem;
+
+  gap: 0.5rem;
 }
 .modal-sub-task-list li {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.import-content{
+.import-content {
   position: absolute;
   display: flex;
   width: 100%;
   height: 16rem;
   background-color: var(--pause-btn-background);
-  
+
   top: 99%;
   flex-direction: column;
-  border-radius:  0 0 10px 10px;
+  border-radius: 0 0 10px 10px;
 }
 .new-import-title {
-    display: flex;
-    width: 100%;
-    font-weight: 700;
-    margin-top: .5rem;
-    justify-content: center;
-    position: relative;
-    color: var(--pause-btn-main);
+  display: flex;
+  width: 100%;
+  font-weight: 700;
+  margin-top: 0.5rem;
+  justify-content: center;
+  position: relative;
+  color: var(--pause-btn-main);
 }
-.new-import-title::after{
-    content: '';
-    position: absolute;
-    border-bottom: solid 0.5px var(--pause-btn-main);
-    width: 80%;
-    top: 1.5rem;
-    margin-top: 0.5rem;
-  }
-  .import-text{
-    display: flex;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    top: 10%;
-    width: 100%;
-    height: 50%;
-    margin-bottom: 1rem;
-  }
-  .import-discription {
-    width: 90%;
-    height: 70%;
-    position: relative;
-    display: flex;
-    background: rgba(189, 145, 42, 0.1);
-    border:none; 
-    border: .5px solid var(--pause-btn-border);
-    outline: none;
-    border-radius: 5px;
-    color: var(--color-text-secondary);
-    
-  }
+.new-import-title::after {
+  content: '';
+  position: absolute;
+  border-bottom: solid 0.5px var(--pause-btn-main);
+  width: 80%;
+  top: 1.5rem;
+  margin-top: 0.5rem;
+}
+.import-text {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  top: 10%;
+  width: 100%;
+  height: 50%;
+  margin-bottom: 1rem;
+}
+.import-discription {
+  width: 90%;
+  height: 70%;
+  position: relative;
+  display: flex;
+  background: rgba(189, 145, 42, 0.1);
+  border: none;
+  border: 0.5px solid var(--pause-btn-border);
+  outline: none;
+  border-radius: 5px;
+  color: var(--color-text-secondary);
+}
 
- 
-  .import-discription::placeholder{
-    font-size: 14px;
-    display: flex;
-    font-family: "Oxanium", sans-serif;
-    font-weight: 600;
-    margin: 1rem 0 0 1rem;
-    transition: all 0.8s ease;
-  }
-  .import-discription:focus::placeholder{
-    transform: translateX(5rem);
-    opacity: 0;
-  }
-  .helper-footer{
-    margin-top: 1rem;
-    display: flex;
-    width: 100%;
-    color: var(--pause-btn-main);
-    font-size: 10px;
-    justify-content: center;
-    
-  }
-  .roud-input-container{
-    position: relative;
-    display: flex;
-  }
-  .roud-input-container p {
-    top:-.1rem;
-    left: 7rem;
-  }
-  .sub-element-container p {
-    top:-.1rem;
-    left: 7rem;
-  }
-  .roadmap-select-bar{
-    display: flex;
-    margin-top: .5rem;
-    justify-content: center;
-  }
-  .create-modal {
-    height: 9rem;
-  }
-  .roadmap-list-selector {
-    display: flex;
-    margin-top: 1rem;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 2rem;
-    width: 80%;
-  }
-  .roadmap-list-selector li {
-    display: flex;
-    border-radius: 8px;
-    background: var(--color-subtask);
-    flex-wrap: wrap;
-    align-content: center;
-    box-shadow: 2px 2px 10px var(--box-shadow-white);
-    height: 2.5rem;
-    border: .5px solid var(--glass-border);
-    width: 100%;
-    justify-content: space-between;
-  }
-  .roadmap-list-container {
-    display: flex;
-    justify-content: center;
-    padding-top: 1rem;
-     overflow-y: auto;
-    scroll-behavior: smooth;
-    scroll-snap-type: y mandatory;
-    -webkit-overflow-scrolling: touch;
-    scrollbar-width: none;
-  }
-  .roadmap-list-item-text{
-    margin-left: 1rem;
-  }
-  .list-bttns {
-    display: flex;
-    margin-right: 1rem;
-    gap: 2rem;
-    flex-direction: row-reverse;
-  }
-  .list-toggler{
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 1.5rem;
-  }
-  .roadmap-content-area{
-    height: 100%;
-    width: 100%;
-  }
-  .go-back-btn-container{ 
-    display: flex;
-    margin-left: 1rem;
-    position: fixed;
-    cursor: pointer;
-    z-index: 5;
-  }
-  .disabled-node {
-    opacity: .5;
-    filter: grayscale(1);
-    pointer-events: none;
-    max-width: 12rem;
-    min-width: 6rem;
-    min-height: 5rem;
-    max-height: 10rem;
-  }
-  .disabled-node .node-text{
-    font-size: 14px;
-  }
-  .disabled-node .subtask-text{
-    font-size: 10px;
-  }
-    
-    
-  .disabled-node .node-acc-btn{
-    pointer-events: all;
-  }
-  .leader-line {
-    z-index: 999;
-    pointer-events: none;
-  }
-  .connection-glow  {
-  filter: drop-shadow(2px 2px 6px #6BCDCE);
+.import-discription::placeholder {
+  font-size: 14px;
+  display: flex;
+  font-family: 'Oxanium', sans-serif;
+  font-weight: 600;
+  margin: 1rem 0 0 1rem;
+  transition: all 0.8s ease;
+}
+.import-discription:focus::placeholder {
+  transform: translateX(5rem);
+  opacity: 0;
+}
+.helper-footer {
+  margin-top: 1rem;
+  display: flex;
+  width: 100%;
+  color: var(--pause-btn-main);
+  font-size: 10px;
+  justify-content: center;
+}
+.roud-input-container {
+  position: relative;
+  display: flex;
+}
+.roud-input-container p {
+  top: -0.1rem;
+  left: 7rem;
+}
+.sub-element-container p {
+  top: -0.1rem;
+  left: 7rem;
+}
+.roadmap-select-bar {
+  display: flex;
+  margin-top: 0.5rem;
+  justify-content: center;
+}
+.create-modal {
+  height: 9rem;
+}
+.roadmap-list-selector {
+  display: flex;
+  margin-top: 1rem;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 2rem;
+  width: 80%;
+}
+.roadmap-list-selector li {
+  display: flex;
+  border-radius: 8px;
+  background: var(--color-subtask);
+  flex-wrap: wrap;
+  align-content: center;
+  box-shadow: 2px 2px 10px var(--box-shadow-white);
+  height: 2.5rem;
+  border: 0.5px solid var(--glass-border);
+  width: 100%;
+  justify-content: space-between;
+}
+.roadmap-list-container {
+  display: flex;
+  justify-content: center;
+  padding-top: 1rem;
+  overflow-y: auto;
+  scroll-behavior: smooth;
+  scroll-snap-type: y mandatory;
+  -webkit-overflow-scrolling: touch;
+  scrollbar-width: none;
+}
+.roadmap-list-item-text {
+  margin-left: 1rem;
+}
+.list-bttns {
+  display: flex;
+  margin-right: 1rem;
+  gap: 2rem;
+  flex-direction: row-reverse;
+}
+.list-toggler {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 1.5rem;
+}
+.roadmap-content-area {
+  height: 100%;
+  width: 100%;
+}
+.go-back-btn-container {
+  display: flex;
+  margin-left: 1rem;
+  position: fixed;
+  cursor: pointer;
+  z-index: 5;
+}
+/* .disabled-node {
+  opacity: 0.5;
+  filter: grayscale(1);
+  pointer-events: none;
+  max-width: 12rem;
+  min-width: 6rem;
+  min-height: 5rem;
+  max-height: 10rem;
+} */
+.disabled-node .node-text {
+  font-size: 14px;
+}
+.disabled-node .subtask-text {
+  font-size: 10px;
+}
+
+.disabled-node .node-acc-btn {
+  pointer-events: all;
+}
+.leader-line {
+  z-index: 999;
+  pointer-events: none;
+}
+.connection-glow {
+  filter: drop-shadow(2px 2px 6px #6bcdce);
 }
 .visible {
   opacity: 1;
   pointer-events: auto;
 }
-.err-msg-import{
+.err-msg-import {
   color: var(--color-danger);
   font-size: 12px;
   position: absolute;
-  
+
   top: 0rem;
 }
-.error-border{
-    border: 0.5px solid var(--btn-danger);
+.error-border {
+  border: 0.5px solid var(--btn-danger);
 }
-
-    
-    
-
-
-
-
-
-
-  
-  
