--- a/css/roudmap.css
+++ b/css/roudmap.css
@@ -1,45 +1,4 @@
-/* .roadmap-list .roadmap-node:first-child {
-  margin-top: 1.5rem;
-} */
-/* .roud-modal {
-  display: flex;
-  position: fixed;
-  flex-direction: column;
-  top: 0;
-  left: 0;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  color: var(--color-text-secondary);
-  border: 1px solid var(--color-glass-bg);
-  height: 100dvh;
-  width: 100dvw;
-  background-color: var(--glass-border);
-  backdrop-filter: blur(0px);
-  -webkit-backdrop-filter: blur(0px);
-  text-align: center;
-  z-index: 10;
-}
-
-.modal-section {
-  display: flex;
-  position: relative;
-  width: 90%;
-  height: 18rem;
-  flex-direction: column;
-  border-radius: 10px;
-  border: solid 0.5px var(--glass-border);
-  flex-direction: column;
-  align-items: flex-start;
-
-  background-color: var(--color-hamburger);
-}
-.modal-tab-bar {
-  display: flex;
-  width: 100%;
-  height: 30%;
-} */
-.new-roud-title {
+/* .new-roud-title {
   display: flex;
   width: 100%;
   font-weight: 700;
@@ -47,14 +6,7 @@
   justify-content: center;
   position: relative;
 }
-.new-roud-title::after {
-  content: '';
-  position: absolute;
-  border-bottom: solid 0.5px var(--glass-border);
-  width: 80%;
-  top: 1.5rem;
-  margin-top: 0.5rem;
-}
+
 .manual-content {
   width: 100%;
   display: flex;
@@ -63,8 +15,8 @@
 }
 .roudnode-title {
   margin: 0 0 0.5rem 1.5rem;
-}
-.roudnode-title::placeholder {
+} */
+/* .roudnode-title::placeholder {
   color: var(--color-text-secondary);
   font-size: 12px;
   font-family: 'Oxanium', sans-serif;
@@ -75,7 +27,7 @@
 .roudnode-title:focus::placeholder {
   transform: translateX(5rem);
   opacity: 0;
-}
+} */
 .modal-subtask,
 .modal-subtask-text {
   display: flex;
