--- a/scss/components/_task-modal.scss
+++ b/scss/components/_task-modal.scss
@@ -77,7 +77,7 @@
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 
     &-divider {
-      color: var.$modal-btn-green-from;
+      color: var.$accent;
       @include mixins.dividier('normal', 2px, $width: 90%);
       margin-bottom: 0.2rem;
 
