--- a/scss/variables/_mixins.scss
+++ b/scss/variables/_mixins.scss
@@ -249,3 +249,34 @@
       drop-shadow(2px 2px 10px rgba($shadow-color, 0.4));
   }
 }
+@mixin checkbox(
+  $hiddenOrigin: true,
+  $size: 0.8rem,
+  $bg: transparent,
+  $bColor: var.$borderTwo
+) {
+  @if $hiddenOrigin {
+    opacity: 0;
+    position: absolute;
+    pointer-events: none;
+  } @else {
+    height: $size;
+    width: $size;
+    border: 1px solid $bColor;
+    border-radius: 2px;
+    position: relative;
+    display: inline-block;
+    background: $bg;
+  }
+}
+@mixin checkbox-check($color: var.$filterGreen) {
+  content: '';
+  position: absolute;
+  left: 2px;
+  top: 0px;
+  width: 5px;
+  height: 12px;
+  border: solid var.$color;
+  transform: rotate(45deg);
+  border-width: 0 2px 2px 0;
+}
